Fixed overlapping #wrap over collapsible navbar

--- a/app/assets/stylesheets/bootstrap_responsive_overrides.less
+++ b/app/assets/stylesheets/bootstrap_responsive_overrides.less
@@ -10,9 +10,3 @@
        width: auto;
    }
 }
-
-.btn-navbar {
-    position: absolute;
-    z-index: 2000;
-    right: 5px;
-}
