--- a/app/assets/stylesheets/footer.less
+++ b/app/assets/stylesheets/footer.less
@@ -21,9 +21,15 @@
 }
 
 /* Lastly, apply responsive CSS fixes as necessary */
-@media (max-width: 980px) {
+@media (max-width: 980px) {     //this is for collapsible navbar issues
     #wrap {
-        margin-top: -81px; // collapsed Navbar pushes down #wrap
+        position: relative;
+        z-index: 1000;
+        margin-top: -81px;
+    }
+    .navbar {
+        position: relative;
+        z-index: 2000;
     }
 }
 
